--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -1,24 +1,28 @@
+/* src/components/FriendListItem/FriendListItem.module.css */
+
 .item {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  padding: 16px;
-  border: 2px solid #302e2e;
-  border-radius: 4px;
   align-items: center;
+  padding: 10px;
 }
 
-.status {
-  font-size: 16px;
+.avatar {
+  margin-bottom: 8px;
+  border-radius: 4px;
 }
 
-.status__isOnline {
-  composes: status;
-  color: #008000;
+.name {
+  font-weight: 600;
+  margin-bottom: 4px;
 }
 
-.status__isOffline {
-  composes: status;
-  color: #ff0000;
+.online {
+  color: green;
+  font-weight: 500;
+}
+
+.offline {
+  color: red;
+  font-weight: 500;
 }
