--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,66 +1,65 @@
+/* src/components/Profile/Profile.module.css */
+
 .profile {
-  width: 360px;
-  margin: 50px auto 0;
-  background-color: #f5f4f4;
-  border: 2px solid #49494a;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #f3f6f9;
+  border: 1px solid #dcdcdc;
+  border-radius: 4px;
+  font-family: sans-serif;
 }
 
 .description {
-  padding: 24px;
-  text-align: center;
+  padding: 30px;
 }
 
 .avatar {
-  width: 120px;
-  height: 120px;
-  margin: 0 auto 24px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
-  background-color: #49494a;
 }
 
 .name {
-  margin: 0 0 8px;
-  font-size: 24px;
   font-weight: 700;
-  color: #49494a;
+  font-size: 18px;
+  margin-top: 10px;
 }
 
-.tag {
-  margin: 0 0 4px;
-  color: #a1a1a1;
-}
-
+.tag,
 .location {
-  color: #a1a1a1;
+  font-size: 14px;
+  color: gray;
+  margin-top: 5px;
 }
 
 .stats {
-  height: 100px;
   display: flex;
-  justify-content: space-between;
-  margin: 0 auto;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
-  background-color: #dad9d9;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  background-color: #f1f2f3;
+  border-top: 1px solid #dcdcdc;
 }
 
-.item {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 20px;
-  border-top: 2px solid #adadad;
-  color: #49494a;
-}
-.item:not(:last-child) {
-  border-right: 2px solid #adadad;
+.stats li {
+  flex-basis: calc(100% / 3);
+  padding: 15px 0;
+  border-right: 1px solid #dcdcdc;
 }
 
-.likes {
+.stats li:last-child {
+  border-right: none;
+}
+
+.label {
+  display: block;
+  font-size: 12px;
+  color: gray;
+  margin-bottom: 5px;
+}
+
+.quantity {
   font-weight: 700;
+  font-size: 16px;
 }
